Fixed the UI shifting in relation to Slidebars.

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ hr {
 }
 
 #user-profile {
-    width: 80%;
+    width: 70%;
     background: #222;
     color: #999;
 	border-radius: 4px;
